fix(GlBroadcastMessage): wrap long words
Applies `overflow-wrap: anywhere` to `GlBroadcastMessage`'s text so that
longer words don't overflow the container.

--- a/src/components/base/broadcast_message/broadcast_message.scss
+++ b/src/components/base/broadcast_message/broadcast_message.scss
@@ -89,7 +89,7 @@
   &-text {
     margin-top: -$gl-spacing-scale-1;
     margin-bottom: -$gl-spacing-scale-1;
-    @include gl-overflow-break-word;
+    @include gl-overflow-anywhere;
   }
 
   &-dismiss {
